Opened 2 years ago

Closed 2 years ago

#9548 closed defect (fixed)

malformed srt conversion

Reported by: Nathan Hinton Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: subtitles regression
Cc: Nathan Hinton Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description (last modified by Nathan Hinton)

Summary of the bug:
How to reproduce:

When using the newest version of ffmpeg the srt files are mis-formatted from what they were in the past. The last version I know works is 4.2.4 in the Focal Fossa repositories of Ubuntu

attached are a video file that is the original video as well as a srt file output from the 7:4.2.4-1ubuntu0.1 version. When I reboot and figure out how I will attach the malformed file as I already overwrote them with the good files. 

Original video file and text file from uploading the video:
https://streams.videolan.org/ffmpeg/incoming/Aslbofm%2008_10.m4v
https://streams.videolan.org/ffmpeg/incoming/Aslbofm%2008_10.m4v.txt

% ffmpeg -i input -y output.srt
ffmpeg version 4.2.5
built on: Ubuntu 21.10 Impish Indri, installed from the default repos

Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.

Attachments (3)

Aslbofm 08_10-ffmpegVersion4.2.4.srt (781 bytes ) - added by Nathan Hinton 2 years ago.
The result of running this command with ffmpeg version 7:4.2.4
Aslbofm 08_10-ffmpegVersion4.4-6ubuntu5.srt (919 bytes ) - added by Nathan Hinton 2 years ago.
The malformatted file
output-from-ffmpeg4.4-6ubuntu5 (3.7 KB ) - added by Nathan Hinton 2 years ago.
output from running the conversion with ffmpeg 4.4-6ubuntu5

Download all attachments as: .zip

Change History (11)

comment:1 by Nathan Hinton, 2 years ago

Component: undeterminedffmpeg
Version: unspecified4.2.5

Sorry, still new to this. I will get the files uploaded as I keep reading the form and learn how to do so.

by Nathan Hinton, 2 years ago

The result of running this command with ffmpeg version 7:4.2.4

by Nathan Hinton, 2 years ago

The malformatted file

comment:2 by Nathan Hinton, 2 years ago

Keywords: subtitles added
Summary: misformatted srt conversionmalformed srt conversion

by Nathan Hinton, 2 years ago

output from running the conversion with ffmpeg 4.4-6ubuntu5

comment:3 by mkver, 2 years ago

We need the input file.

in reply to:  3 comment:4 by Nathan Hinton, 2 years ago

Replying to mkver:

We need the input file.

Sorry it took me so long to figure out how to upload it. Here is the file link as well as the text file that it came with:

https://streams.videolan.org/ffmpeg/incoming/Aslbofm%2008_10.m4v
https://streams.videolan.org/ffmpeg/incoming/Aslbofm%2008_10.m4v.txt

Hopefully I got it right this time.

comment:5 by Nathan Hinton, 2 years ago

Description: modified (diff)

comment:6 by mkver, 2 years ago

Component: ffmpegavcodec
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: 4.2.5git-master

Regression since 2949f17e992be600c379112d4e84e8455bae180a, the current output first appears with e5b99df096b8f15468dffb0e1cac0b27a9c453f3.

comment:7 by mkver, 2 years ago

Keywords: regression added

comment:8 by mkver, 2 years ago

Resolution: fixed
Status: openclosed

Fixed in cc1251ab814374ffb27cdebf2099b11a422d8187.
It was actually not really a bug: The input file has a default style and every subtitle had a style overriding it that applied to all characters except the very last one (where the default style applied), leading to the output you see. But given that the override style coincided with the default style (and was therefore superfluous) it could be fixed without adding a hack.

Note: See TracTickets for help on using tickets.